--- a/cart-next/package.json
+++ b/cart-next/package.json
@@ -18,6 +18,7 @@
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "keen-slider": "^6.8.5",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "json-server": "^0.17.1",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
   }
