--- a/cart-next/package.json
+++ b/cart-next/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
     "@next/font": "13.1.6",
+    "@radix-ui/react-alert-dialog": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.1",
@@ -26,6 +28,7 @@
     "next-auth": "^4.19.2",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
+    "react-awesome-reveal": "^4.2.3",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
   },
