--- a/cart-next/package.json
+++ b/cart-next/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "json-server -p 3333 D:\\Desenvolvimento\\react-market\\cart-next\\public\\api_mock\\products.json"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -14,6 +15,7 @@
     "@radix-ui/react-alert-dialog": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.2",
+    "@radix-ui/react-select": "^1.2.1",
     "@radix-ui/react-slot": "^1.0.1",
     "@radix-ui/react-toast": "^1.1.2",
     "@tailwindcss/line-clamp": "^0.4.2",
